46
================

01/08/22 Implement and unit test new SAC Metrics API publisher #1153
30/07/22 Thumbnail style incorrect in transport book, person find/image broken
30/07/22 Thumbnails not styled correctly and missing sex in medical/test/vacc books
30/07/22 Improve look of tables by applying row styles
30/07/22 Fix OOM bug on iPhone due to needlessly applying table cell styles
29/07/22 Replace use of Object.assign with common.copy_object due to error reports
29/07/22 Increase cache times for animal_view and online_form_* #1158
28/07/22 Add caller and victim as columns for incident results #1157
28/07/22 Auto disable shelterview drag and drop for mobile devices
27/07/22 Show complete address for people under general search
27/07/22 Add maint_db_dump_dbfs_files cron task
24/07/22 Merge/fix PR #1151, add Sponsor flag and Sponsor/Vet fields (Roman Safovich)
24/07/22 Handle favicon.ico calls from old browsers
24/07/22 Cache 404s at proxy/CDN level as they can be a DoS vector
23/07/22 Config option to allow future intakes on shelter (on by default) #1154
22/07/22 Prevent /image and /service sending session cookie for caching
22/07/22 Retry and error notification mechanism for failed S3 PUT #1155
22/07/22 Use block elements instead of <br> in adoptable_js
21/07/22 Hebrew translation update (Saggi Neuemann)
19/07/22 Do not look up manufacturer/batch numbers at all if option is off
18/07/22 Annual figures: do not count neuter/spays before datebroughtin
17/07/22 Stop new animals with future intake date appearing on shelter #1150
15/07/22 Fix bug where person chooser not showing similar people during add
15/07/22 Show alerts for unsigned/signed documents on animal records
12/07/22 Fix FTP chdir/recovery path for reconnection in AdoptAPet
12/07/22 Fix partially implemented additional field type for Time
12/07/22 Fix bug where clone_from_template copied the time of DateBroughtIn
08/07/22 ActiveLitterMates wordkey